--- a/playbooks/tasks/ssh.yml
+++ b/playbooks/tasks/ssh.yml
@@ -1,4 +1,9 @@
+---
 # vim:ff=unix ts=2 sw=2 ai expandtab ft=yaml:
-
+#
+# Tasklist : ssh.yml
+# Author   : Ton Kersten
+# Date     : 03-01-2019
+#
 - include_role:
     name: ssh
